--- a/HealthCare/HealthCare/Properties/Resources.resx
+++ b/HealthCare/HealthCare/Properties/Resources.resx
@@ -127,4 +127,22 @@
   <data name="IconFind1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\IconFind1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="anger" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\anger.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CONTEMPT" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\CONTEMPT.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="joy" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\joy.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Normal" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Normal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="sad" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\sad.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="suprise" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\suprise.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
